--- a/three.js/2.vite_setup/INSTALLATION/package.json
+++ b/three.js/2.vite_setup/INSTALLATION/package.json
@@ -16,7 +16,8 @@
     "vite": "^6.0.3"
   },
   "dependencies": {
-    "postcss-cli": "^11.0.0"
+    "postcss-cli": "^11.0.0",
+    "three": "^0.171.0"
   },
   "main": "postcss.config.js",
   "keywords": [],
